# refund-pilot

./: .dockerignore  .env.example  .pre-commit-config.yaml  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.worker  nginx.conf  nginx.prod.conf
docker/authproxy/: auth.js  nginx.conf
docs/: agent-design.md  docker-quickstart.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ErrorBoundary.tsx  Login.tsx
frontend/src/components/Admin/: MetricsPanel.tsx  RunDetail.tsx  RunsTable.tsx
frontend/src/components/Chat/: ChatWindow.tsx  CustomerSelector.tsx  MessageBubble.tsx
frontend/src/hooks/: useAdminRuns.ts  useChat.ts
frontend/src/store/: chat.ts
observability/: loki-config.yaml  otel-collector-config.yaml  prometheus.yml  tempo-config.yaml
observability/grafana/dashboards/: dashboards.yaml  refund-pilot.json
scripts/: cf-urls.sh
src/refund_pilot/agent/: fallback.py  graph.py  nodes.py  policy.txt  prompts.py  state.py  tools.py
src/refund_pilot/api/: app.py  dependencies.py
src/refund_pilot/api/middleware/: logging.py  request_id.py
src/refund_pilot/api/routers/: __init__.py  admin.py  auth.py  conversations.py  customers.py  health.py
src/refund_pilot/core/: config.py  logging.py  metrics.py  retry.py  security.py  telemetry.py
src/refund_pilot/data/: customers.py  orders.py  seed.py
src/refund_pilot/db/: session.py
src/refund_pilot/db/migrations/: env.py
src/refund_pilot/db/migrations/versions/: 0001_initial.py  0002_add_restate_decision.py
src/refund_pilot/db/models/: __init__.py  admin_user.py  agent_run.py  chat_message.py  conversation.py  customer.py  escalation.py  order.py
src/refund_pilot/schemas/: admin.py  agent.py  chat.py
src/refund_pilot/workers/: celery_app.py  tasks.py
tests/: conftest.py
tests/adversarial/: test_injection.py
tests/integration/: test_admin_api.py  test_agent_graph.py  test_auth_api.py  test_chat_api.py  test_health.py
tests/unit/: test_fallback.py  test_pipeline_config.py  test_policy.py  test_prompts.py  test_seed_data.py  test_tasks.py  test_tools.py
